<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendPackage"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_id"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="76dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:layout_margin="2sp"/>

    <TextView
        android:id="@+id/tv_packagetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_type"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="76dp"
        android:textSize="18sp"/>
    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2sp">
    <RadioButton
        android:id="@+id/rb_packageType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:layout_margin="2sp"/>

    <RadioButton
        android:id="@+id/rb_packageType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:layout_margin="2sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="76dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/latitude1"
        android:layout_margin="2sp"/>

    <TextView
        android:id="@+id/tv_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="76dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/longitude1"
        android:layout_margin="2sp"/>

    <TextView
        android:id="@+id/tv_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="76dp"
        android:textSize="18sp"/>

    <DatePicker
        android:id="@+id/dp"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TimePicker
        android:id="@+id/tp"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:timePickerMode="spinner" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:text="@string/add_package"
        android:onClick="button_add"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:text="@string/cancel"
        android:onClick="button_cancel"/>

</LinearLayout>
</LinearLayout>