<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">



        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_package"
            android:onClick="button_send"/>

        <Button
            android:id="@+id/buttonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_list"
            android:onClick="button_list"/>

        <Button
            android:id="@+id/buttonBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_packages"
            android:onClick="button_backup"/>

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_packages"
            android:onClick="button_update"/>

        <Button
            android:id="@+id/buttonSendingRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_sending_rate" />

</LinearLayout>