<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/p_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id1"
            />
        <TextView
            android:id="@+id/p_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state1"/>
        <TextView
            android:id="@+id/p_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/p_lat"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude1"/>
        <TextView
            android:id="@+id/p_long"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude1"/>
    </LinearLayout>

</LinearLayout>